Its make release and not make build

--- a/.github/workflows/release-assets.yaml
+++ b/.github/workflows/release-assets.yaml
@@ -30,7 +30,7 @@ jobs:
     - name: Build
       id: build
       run: |
-        make build
+        make release
     - name: Upload assets
       id: upload-assets
       env:
